# verti-guard

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  idea.md  pyproject.toml  render.yaml
docs/: ARCHITECTURE.md  NEW_FEATURES.md
examples/: comprehensive_monitoring.py
examples/legal_analyzer/: app.py  detra.yaml  service.py  vertiguard.yaml
scripts/: export_datadog_configs.py  test_e2e.py  traffic_generator.py
src/detra/: __init__.py  client.py
src/detra/dashboard/: __init__.py  builder.py  comprehensive_template.py  templates.py
src/detra/decorators/: trace.py
src/detra/telemetry/: datadog_client.py  llmobs_bridge.py
src/vertiguard/: client.py
src/vertiguard/actions/: notifications.py
src/vertiguard/agents/: __init__.py  monitor.py  tools.py  workflow.py
src/vertiguard/config/: defaults.py  schema.py
src/vertiguard/dashboard/: templates.py
src/vertiguard/decorators/: trace.py
src/vertiguard/detection/: monitors.py
src/vertiguard/errors/: __init__.py  grouper.py  tracker.py
src/vertiguard/evaluation/: gemini_judge.py
src/vertiguard/optimization/: __init__.py  dspy_optimizer.py  root_cause.py
src/vertiguard/telemetry/: datadog_client.py  llmobs_bridge.py
tests/: conftest.py  test_config.py
